[package]
name = "rippled_binary_codec"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.126", features=["derive"]}
serde-value = "0.7.0"
ripple-address-codec = "0.1.1"
proc-macro-regex = "~1.0.0"
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
serde_json = "1.0"
hex = "0.4.3"
ascii = { version = "1.0", default-features = false }
bytes="1.1.0"
