[package]
name = "rippled_binary_codec"
version = "0.0.5"
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["ripple", "serialization"]
categories = ["encoding"]
include = ["src/**/*.rs", "src/fixtures/definitions.json", "README.md","LICENSE-MIT"]
rust-version = "1.57"
description = "Serializing a XRP transaction from JSON into their canonical binary format."
documentation = "https://docs.rs/rippled_binary_codec"
repository = "https://github.com/KeystoneHQ/rippled_binary_codec.git"

[dependencies]
serde = { version = "1.0.126", features=["derive"]}
serde-value = "0.7.0"
ripple-address-codec = "0.1.1"
proc-macro-regex = "~1.0.0"
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
serde_json = "1.0"
hex = "0.4.3"
ascii = { version = "1.0", default-features = false }
bytes="1.1.0"
